--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP0eDgmsKYmBfNBSdFeALP8",
+      "authorship_tag": "ABX9TyM9DRGSpxeKA53Tk1hKr458",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,6 @@
         "id": "HZ1IOEJBxVOt"
       },
       "source": [
-        "#!echo -e \"Esto es \\e[0;31mrojo\\e[0m y esto es \\e[1;34mazul resaltado\\e[0m\"  #https://sinfallas.wordpress.com/2016/07/08/colorear-texto-en-bash/\r\n",
-        "\r\n",
         "!echo -e \"\\n\\e[1;34mPreparación del entorno\\e[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\"               \r\n",
         "!echo \"Buscando paquetes nuevos...\"\r\n",
         "!apt update -y -q > /dev/null 2>&1\r\n",
@@ -65,13 +63,14 @@
       },
       "source": [
         "#!rm ./potfile.txt\n",
+        "!rm ficheroHASHES.txt\n",
         "tipoHASH=1000   #tipo NTLM   #https://www.browserling.com/tools/ntlm-hash\n",
-        "#HASH ='4BF850B7E390F2F437603942423187C4' #cosa en NTLM\n",
-        "#HASH ='B57F325A2942488FD508C1C130D13682' #cosuca en NTLM\n",
-        "#HASH ='F700E1777EAD870B6543CEB06583E074' #usuaria en NTLM   \n",
-        "#HASH ='F2AB082FA1B21C772EEA4193D454D7B0' #usuario en NTLM   \n",
-        "#HASH ='2E910C3936F4836AC29BBDC307536524' #usuario@1 en NTLM \n",
-        "#!echo $HASH >ficheroHASHES.txt\n",
+        "!echo 4BF850B7E390F2F437603942423187C4 >>ficheroHASHES.txt #cosa en NTLM\n",
+        "!echo B57F325A2942488FD508C1C130D13682 >>ficheroHASHES.txt #cosuca en NTLM\n",
+        "!echo F700E1777EAD870B6543CEB06583E074 >>ficheroHASHES.txt #usuaria en NTLM   \n",
+        "!echo F2AB082FA1B21C772EEA4193D454D7B0 >>ficheroHASHES.txt #usuario en NTLM   \n",
+        "!echo 2E910C3936F4836AC29BBDC307536524 >>ficheroHASHES.txt #usuario@1 en NTLM\n",
+        "!echo $HASH >>ficheroHASHES.txt\n",
         "\n",
         "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a','?l?l?l?l?l?l?l?s?d','?u?l?l?l?l?l?l?s?d', '?u?u?u?u?u?u?u?u?u', '?a?a?a?a?a?a?a?a?a']:\n",
         "    !echo -e \"\\e[0;34mBuscando \\e[1;34m$mascara\\e[0m\"\n",
