--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9DRGSpxeKA53Tk1hKr458",
+      "authorship_tag": "ABX9TyMaI7N+44Cj9uyxArIy+zvi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HZ1IOEJBxVOt"
+        "id": "HZ1IOEJBxVOt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da80436a-24e7-41df-8235-4365fff66edc"
       },
       "source": [
         "!echo -e \"\\n\\e[1;34mPreparación del entorno\\e[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\"               \r\n",
@@ -53,8 +57,25 @@
         "    !cat TestDeVelocidad.txt|grep Speed\r\n",
         "    !echo -e \"\\e[1;34mListo para trabajar.\\e[0m\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\u001b[1;34mPreparación del entorno\u001b[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\n",
+            "Buscando paquetes nuevos...\n",
+            "Actualizando paquetes...\n",
+            "Instalando hascat ...\n",
+            "Instalando utilidades de pci ...\n",
+            "Comprobando tarjeta gráfica...\n",
+            "\u001b[1;34mEncontrada tarjeta gráfica NVIDIA\u001b[0m\n",
+            "\u001b[1;34mTest de Velocidad\u001b[0m\n",
+            "\u001b[1;34mListo para trabajar.\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -72,7 +93,8 @@
         "!echo 2E910C3936F4836AC29BBDC307536524 >>ficheroHASHES.txt #usuario@1 en NTLM\n",
         "!echo $HASH >>ficheroHASHES.txt\n",
         "\n",
-        "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a','?l?l?l?l?l?l?l?s?d','?u?l?l?l?l?l?l?s?d', '?u?u?u?u?u?u?u?u?u', '?a?a?a?a?a?a?a?a?a']:\n",
+        "#otros posibles intentos '?l?l?l?l?l?l?l?s?d','?u?l?l?l?l?l?l?s?d', '?u?u?u?u?u?u?u?u?u', '?a?a?a?a?a?a?a?a?a'\n",
+        "for mascara in ['?l?l?l?l?l?l?l?s?d','?a?a?a?a?a?a?a?a?a?a?a?a?a']:\n",
         "    !echo -e \"\\e[0;34mBuscando \\e[1;34m$mascara\\e[0m\"\n",
         "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment  ficheroHASHES.txt $mascara #> /dev/null 2>&1\n",
         "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascara --left\n",
