--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOB+yZEPl5o3pWlkJ3FNLyd",
+      "authorship_tag": "ABX9TyNUkVXF2s91CuVkrqu5lOgC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
       },
       "source": [
         "#!rm ./potfile.txt          Los resultados intermedios se guardan en el fichero potfile.txt (se puede borrar)\n",
-        "for mascara in ['?l?l?l?l?l?l?l?s?d','?a?a?a?a?a?a?a?a?a?a?a?a?a']:   #otros posibles intentos '?l?l?l?l?l?l?l?s?d','?u?l?l?l?l?l?l?s?d', '?u?u?u?u?u?u?u?u?u', '?a?a?a?a?a?a?a?a?a'\n",
+        "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a','?l?l?l?l?l?l?l?s?d',]:   #otros posibles intentos '?l?l?l?l?l?l?l?s?d','?u?l?l?l?l?l?l?s?d', '?u?u?u?u?u?u?u?u?u', '?a?a?a?a?a?a?a?a?a'\n",
         "    !echo -e \"\\e[0;34mBuscando \\e[1;34m$mascara\\e[0m\"\n",
         "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment  ficheroHASHES.txt $mascara #> /dev/null 2>&1\n",
         "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascara --left\n",
@@ -130,7 +130,7 @@
         "id": "Jae_9tGaWAJs"
       },
       "source": [
-        "!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment  --increment-min=8 ficheroHASHES.txt '?a?a?a?a?a?a?a?a?a?a?a?a?a' #> /dev/null 2>&1"
+        "!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --increment-min 8 ficheroHASHES.txt '?u?l?l?l?a?a?a?a?a?a?a?a?a' #> /dev/null 2>&1"
       ],
       "execution_count": null,
       "outputs": []
