--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBGerbGEpK9Y+2e+fpbzJx",
+      "authorship_tag": "ABX9TyP224OxlTWQSBdRWdVNz0rZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,41 +127,117 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rNfuS0OR2rMv"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 393
+        },
+        "id": "rNfuS0OR2rMv",
+        "outputId": "3da945ff-f102-43c2-a197-bbd08a7232d1"
       },
       "source": [
         "#Trabajando como hilos\r\n",
         "import threading\r\n",
         "import time, datetime\r\n",
-        "def ContenidoPotFile( ficheroPot=\"./potfile.txt\")\r\n",
-        "    !echo -e \"\\n\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
-        "    !cat ./potfile.txt #!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascaraausar --show\r\n",
+        "def MuestraContenidoPotFile( ficheroPot=\"./potfile.txt\"):\r\n",
         "    !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
+        "    !cat $ficheroPot  \r\n",
+        "    #!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascaraausar --show\r\n",
+        "    !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
+        "    \r\n",
         "\r\n",
-        "\r\n",
-        "def EjecutaHashcatDeMascara(mascaraausar, tipoHASH=1000, tipoDeIncremento=\"--increment\", ficheroPot=\"./potfile.txt\"):\r\n",
+        "def EjecutaHashcatDeMascara(mascaraausar, tipoDeIncremento=\"--increment\", tipoHASH=1000,  ficheroPot=\"./potfile.txt\"):\r\n",
         "    inicio=datetime.datetime.now()\r\n",
-        "    !echo -e \"\\e[0;34mBuscando \\e[1;34m\"$mascaraausar\"\\e[0m\"\r\n",
-        "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment  ficheroHASHES.txt $mascaraausar > /dev/null 2>&1\r\n",
-        "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascaraausar --left\r\n",
+        "    !echo -e \"\\e[0;34mBuscando \\e[1;34m\"$mascaraausar\" \"$tipoDeIncremento \" tipoHASH=\"$tipoHASH \" ficheroPot=\"$ficheroPot \"\\e[0m\"\r\n",
+        "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento  ficheroHASHES.txt $mascaraausar > /dev/null 2>&1\r\n",
+        "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento --quiet ficheroHASHES.txt $mascaraausar --left\r\n",
         "    fin=datetime.datetime.now()\r\n",
         "    segundosEmpleados=round((fin-inicio).total_seconds(),2)\r\n",
         "    !echo -e \"\\e[1;34mFin de máscara \" $mascaraausar \". Resueltos (\"$segundosEmpleados\"sg):\\e[0;34m\"\r\n",
-        "    ContenidoPotFile(ficheroPot)\r\n",
+        "    MuestraContenidoPotFile(ficheroPot)\r\n",
         "\r\n",
-        "!rm ./potfile.txt\r\n",
+        "ficheroPorFileaUsar=\"./potfile.txt\"\r\n",
+        "!rm $ficheroPorFileaUsar\r\n",
         "for mascara in ['?l?l?l?l?l?l?l?l?l?l?l?l']: #, \"?a?l?a?a\"\r\n",
         "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,), daemon=False)\r\n",
         "  x.start()\r\n",
-        "  contadorsegundos=0\r\n",
+        "  contadorsegundos=0; incrementoDeEspera=1\r\n",
+        "  ContenidoPotFileAnterior=\"\"\r\n",
         "  while x.isAlive():\r\n",
-        "      time.sleep(60*5)\r\n",
-        "      print('Esperando ' , contadorsegundos/60 , 'mn....')\r\n",
-        "      ContenidoPotFile\r\n",
-        "      contadorsegundos=contadorsegundos+1\r\n"
+        "      #Esperamos un tiempo a evaluar\r\n",
+        "      time.sleep(incrementoDeEspera)\r\n",
+        "      #Comprobamos si se han encontrado nuevos hashes\r\n",
+        "      ContenidoPotFile=!cat $ficheroPorFileaUsar\r\n",
+        "      if (ContenidoPotFile != ContenidoPotFileAnterior):\r\n",
+        "        MuestraContenidoPotFile()\r\n",
+        "      ContenidoPotFileAnterior=ContenidoPotFile\r\n",
+        "      #Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\r\n",
+        "      if (contadorsegundos%(60*5)==0):\r\n",
+        "        print(contadorsegundos%(60*5))\r\n",
+        "        print('Esperando ' , contadorsegundos/60 , 'mn....')\r\n",
+        "      #Aumentamos el contador de tiempo\r\n",
+        "      contadorsegundos=contadorsegundos+incrementoDeEspera\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "rm: cannot remove './potfile.txt': No such file or directory\n",
+            "Contenido  ./potfile.txt\n",
+            "\u001b[1;34m-----------------------------------------------------------------------------------------------\u001b[0m\n",
+            "\u001b[0;34mBuscando \u001b[1;34m?l?l?l?l?l?l?l?l?l?l?l?l\u001b[0m\n",
+            "cat: ./potfile.txt: No such file or directory\n",
+            "\u001b[1;34m-----------------------------------------------------------------------------------------------\u001b[0m\n",
+            "Fin Contenido  ./potfile.txt\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-a1c1779bfbb6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misAlive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m       \u001b[0mContenidoPotFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "^C\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0C4gwxVoNQ6U",
+        "outputId": "7eb7d753-827d-49a0-9f51-d9522cbad447"
+      },
+      "source": [
+        "!cat ./potfile.txt"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "93cc2b4d5d1fccc38fab249a9aedb1e3:c\n",
+            "bf2a48ef8ac2e1705e93e823d9d2f7d7:co\n",
+            "00557e9d1dcd89164042625ef5dba40c:cos\n",
+            "4bf850b7e390f2f437603942423187c4:cosa\n",
+            "b57f325a2942488fd508c1c130d13682:cosuca\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
