--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP224OxlTWQSBdRWdVNz0rZ",
+      "authorship_tag": "ABX9TyOj0WbLnMSLVFS/jJuobW8b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HZ1IOEJBxVOt"
+        "id": "HZ1IOEJBxVOt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f2635026-845e-4506-8a97-cb6a9fad9ed6"
       },
       "source": [
         "!echo -e \"\\n\\e[1;34mPreparación del entorno\\e[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\"               \r\n",
@@ -54,7 +58,7 @@
         "!apt update -y -q > /dev/null 2>&1\r\n",
         "!echo \"Actualizando paquetes...\"\r\n",
         "!apt upgrade -y -q > /dev/null 2>&1\r\n",
-        "!echo \"Instalando hascat ...\"\r\n",
+        "!echo \"Instalando hashcat ...\"\r\n",
         "!apt install hashcat -y -q > /dev/null 2>&1\r\n",
         "!echo \"Instalando utilidades de pci ...\"\r\n",
         "!apt install pciutils -y -q > /dev/null 2>&1\r\n",
@@ -71,8 +75,27 @@
         "    !cat TestDeVelocidad.txt|grep Speed\r\n",
         "    !echo -e \"\\e[1;34mListo para trabajar.\\e[0m\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\u001b[1;34mPreparación del entorno\u001b[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\n",
+            "Buscando paquetes nuevos...\n",
+            "Actualizando paquetes...\n",
+            "Instalando hascat ...\n",
+            "Instalando utilidades de pci ...\n",
+            "Comprobando tarjeta gráfica...\n",
+            "\u001b[1;34mEncontrada tarjeta gráfica NVIDIA\u001b[0m\n",
+            "\u001b[1;34mTest de Velocidad\u001b[0m\n",
+            "* Device #1: Tesla T4, 3769/15079 MB allocatable, 40MCU\n",
+            "Speed.Dev.#1.....: 36800.2 MH/s (36.01ms)\n",
+            "\u001b[1;34mListo para trabajar.\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -127,22 +150,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 393
-        },
-        "id": "rNfuS0OR2rMv",
-        "outputId": "3da945ff-f102-43c2-a197-bbd08a7232d1"
+        "id": "rNfuS0OR2rMv"
       },
       "source": [
         "#Trabajando como hilos\r\n",
         "import threading\r\n",
         "import time, datetime\r\n",
         "def MuestraContenidoPotFile( ficheroPot=\"./potfile.txt\"):\r\n",
-        "    !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
-        "    !cat $ficheroPot  \r\n",
-        "    #!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascaraausar --show\r\n",
-        "    !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
+        "    ContenidoPotFile=!cat $ficheroPorFileaUsar 2>/dev/null\r\n",
+        "    if (not ContenidoPotFile ):\r\n",
+        "      !echo -e \"\\e[1;34mPotfile vacio\\e[0m\"\r\n",
+        "    else:\r\n",
+        "      !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
+        "      !cat $ficheroPot  \r\n",
+        "      !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\r\n",
         "    \r\n",
         "\r\n",
         "def EjecutaHashcatDeMascara(mascaraausar, tipoDeIncremento=\"--increment\", tipoHASH=1000,  ficheroPot=\"./potfile.txt\"):\r\n",
@@ -157,7 +178,7 @@
         "\r\n",
         "ficheroPorFileaUsar=\"./potfile.txt\"\r\n",
         "!rm $ficheroPorFileaUsar\r\n",
-        "for mascara in ['?l?l?l?l?l?l?l?l?l?l?l?l']: #, \"?a?l?a?a\"\r\n",
+        "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a']: #, \"?a?l?a?a\"\r\n",
         "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,), daemon=False)\r\n",
         "  x.start()\r\n",
         "  contadorsegundos=0; incrementoDeEspera=1\r\n",
@@ -177,67 +198,19 @@
         "      #Aumentamos el contador de tiempo\r\n",
         "      contadorsegundos=contadorsegundos+incrementoDeEspera\r\n"
       ],
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "rm: cannot remove './potfile.txt': No such file or directory\n",
-            "Contenido  ./potfile.txt\n",
-            "\u001b[1;34m-----------------------------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;34mBuscando \u001b[1;34m?l?l?l?l?l?l?l?l?l?l?l?l\u001b[0m\n",
-            "cat: ./potfile.txt: No such file or directory\n",
-            "\u001b[1;34m-----------------------------------------------------------------------------------------------\u001b[0m\n",
-            "Fin Contenido  ./potfile.txt\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-55-a1c1779bfbb6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misAlive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m       \u001b[0mContenidoPotFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "^C\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0C4gwxVoNQ6U",
-        "outputId": "7eb7d753-827d-49a0-9f51-d9522cbad447"
+        "id": "0C4gwxVoNQ6U"
       },
       "source": [
         "!cat ./potfile.txt"
       ],
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "93cc2b4d5d1fccc38fab249a9aedb1e3:c\n",
-            "bf2a48ef8ac2e1705e93e823d9d2f7d7:co\n",
-            "00557e9d1dcd89164042625ef5dba40c:cos\n",
-            "4bf850b7e390f2f437603942423187c4:cosa\n",
-            "b57f325a2942488fd508c1c130d13682:cosuca\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
