--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOj0WbLnMSLVFS/jJuobW8b",
+      "authorship_tag": "ABX9TyPWgjKHWvqn2xxaDLpBsYHy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,11 +46,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HZ1IOEJBxVOt",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f2635026-845e-4506-8a97-cb6a9fad9ed6"
+        "id": "HZ1IOEJBxVOt"
       },
       "source": [
         "!echo -e \"\\n\\e[1;34mPreparación del entorno\\e[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\"               \r\n",
@@ -75,27 +71,8 @@
         "    !cat TestDeVelocidad.txt|grep Speed\r\n",
         "    !echo -e \"\\e[1;34mListo para trabajar.\\e[0m\""
       ],
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "\u001b[1;34mPreparación del entorno\u001b[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\n",
-            "Buscando paquetes nuevos...\n",
-            "Actualizando paquetes...\n",
-            "Instalando hascat ...\n",
-            "Instalando utilidades de pci ...\n",
-            "Comprobando tarjeta gráfica...\n",
-            "\u001b[1;34mEncontrada tarjeta gráfica NVIDIA\u001b[0m\n",
-            "\u001b[1;34mTest de Velocidad\u001b[0m\n",
-            "* Device #1: Tesla T4, 3769/15079 MB allocatable, 40MCU\n",
-            "Speed.Dev.#1.....: 36800.2 MH/s (36.01ms)\n",
-            "\u001b[1;34mListo para trabajar.\u001b[0m\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -121,28 +98,6 @@
         "!echo F2AB082FA1B21C772EEA4193D454D7B0 >>ficheroHASHES.txt #usuario en NTLM   \r\n",
         "!echo 2E910C3936F4836AC29BBDC307536524 >>ficheroHASHES.txt #usuario@1 en NTLM\r\n",
         "!echo $HASH >>ficheroHASHES.txt"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UsI7rkixetjf"
-      },
-      "source": [
-        "#!rm ./potfile.txt          Los resultados intermedios se guardan en el fichero potfile.txt (se puede borrar)\n",
-        "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a','?l?l?l?l?l?l?l?s?d',]:   #otros posibles intentos '?l?l?l?l?l?l?l?s?d','?u?l?l?l?l?l?l?s?d', '?u?u?u?u?u?u?u?u?u', '?a?a?a?a?a?a?a?a?a'\n",
-        "    !echo -e \"\\e[0;34mBuscando \\e[1;34m$mascara\\e[0m\"\n",
-        "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment  ficheroHASHES.txt $mascara #> /dev/null 2>&1\n",
-        "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascara --left\n",
-        "    !echo -e \"\\n\\n\\n\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\n",
-        "    !echo -e \"\\e[1;34mResueltos hasta ahora!\\e[0;34m\"\n",
-        "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --quiet ficheroHASHES.txt $mascara --show\n",
-        "    !echo -e \"\\e[1;34m-----------------------------------------------------------------------------------------------\\e[0m\"\n",
-        "    if not SinEncontrar:\n",
-        "        !echo -e \"\\n\\e[1;34mResueltos todos los hashes!\\e[0m\"\n",
-        "        break\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -192,22 +147,10 @@
         "        MuestraContenidoPotFile()\r\n",
         "      ContenidoPotFileAnterior=ContenidoPotFile\r\n",
         "      #Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\r\n",
-        "      if (contadorsegundos%(60*5)==0):\r\n",
-        "        print(contadorsegundos%(60*5))\r\n",
-        "        print('Esperando ' , contadorsegundos/60 , 'mn....')\r\n",
+        "      if (contadorsegundos%(60*1)==0 and contadorsegundos>0):\r\n",
+        "        print('Tiempo transcurrido ' , contadorsegundos/60 , 'mn....')\r\n",
         "      #Aumentamos el contador de tiempo\r\n",
         "      contadorsegundos=contadorsegundos+incrementoDeEspera\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0C4gwxVoNQ6U"
-      },
-      "source": [
-        "!cat ./potfile.txt"
       ],
       "execution_count": null,
       "outputs": []
