--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWgjKHWvqn2xxaDLpBsYHy",
+      "authorship_tag": "ABX9TyPDF31xQPC/LwDBm5vWy/yL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
         "!echo 2E910C3936F4836AC29BBDC307536524 >>ficheroHASHES.txt #usuario@1 en NTLM\r\n",
         "!echo $HASH >>ficheroHASHES.txt"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "def EjecutaHashcatDeMascara(mascaraausar, tipoDeIncremento=\"--increment\", tipoHASH=1000,  ficheroPot=\"./potfile.txt\"):\r\n",
         "    inicio=datetime.datetime.now()\r\n",
         "    !echo -e \"\\e[0;34mBuscando \\e[1;34m\"$mascaraausar\" \"$tipoDeIncremento \" tipoHASH=\"$tipoHASH \" ficheroPot=\"$ficheroPot \"\\e[0m\"\r\n",
-        "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento  ficheroHASHES.txt $mascaraausar > /dev/null 2>&1\r\n",
+        "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento  ficheroHASHES.txt $mascaraausar > /dev/null #2>&1\r\n",
         "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento --quiet ficheroHASHES.txt $mascaraausar --left\r\n",
         "    fin=datetime.datetime.now()\r\n",
         "    segundosEmpleados=round((fin-inicio).total_seconds(),2)\r\n",
@@ -132,6 +132,7 @@
         "    MuestraContenidoPotFile(ficheroPot)\r\n",
         "\r\n",
         "ficheroPorFileaUsar=\"./potfile.txt\"\r\n",
+        "inicioEjecucion=datetime.datetime.now()\r\n",
         "!rm $ficheroPorFileaUsar\r\n",
         "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a']: #, \"?a?l?a?a\"\r\n",
         "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,), daemon=False)\r\n",
@@ -141,27 +142,17 @@
         "  while x.isAlive():\r\n",
         "      #Esperamos un tiempo a evaluar\r\n",
         "      time.sleep(incrementoDeEspera)\r\n",
+        "      contadorsegundos=round((datetime.datetime.now()-inicioEjecucion).total_seconds(),0) \r\n",
         "      #Comprobamos si se han encontrado nuevos hashes\r\n",
         "      ContenidoPotFile=!cat $ficheroPorFileaUsar\r\n",
         "      if (ContenidoPotFile != ContenidoPotFileAnterior):\r\n",
         "        MuestraContenidoPotFile()\r\n",
         "      ContenidoPotFileAnterior=ContenidoPotFile\r\n",
         "      #Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\r\n",
-        "      if (contadorsegundos%(60*1)==0 and contadorsegundos>0):\r\n",
-        "        print('Tiempo transcurrido ' , contadorsegundos/60 , 'mn....')\r\n",
+        "      if (contadorsegundos%(60)==0 and contadorsegundos>0):\r\n",
+        "        print(datetime.datetime.now(),': Tiempo transcurrido ' , contadorsegundos/60 , 'mn....')\r\n",
         "      #Aumentamos el contador de tiempo\r\n",
-        "      contadorsegundos=contadorsegundos+incrementoDeEspera\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Jae_9tGaWAJs"
-      },
-      "source": [
-        "!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment --increment-min 8 ficheroHASHES.txt '?u?l?l?l?a?a?a?a?a?a?a?a?a' #> /dev/null 2>&1"
+        "      \r\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -174,6 +165,18 @@
       "source": [
         "#Para ver la ayuda de hascat completa:\r\n",
         "!hashcat --help"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jae_9tGaWAJs"
+      },
+      "source": [
+        "#Ejemplo de ejecución\r\n",
+        "!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path ./potfile.txt --increment ficheroHASHES.txt '?u' "
       ],
       "execution_count": null,
       "outputs": []
