--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDF31xQPC/LwDBm5vWy/yL",
+      "authorship_tag": "ABX9TyPhKPrmG8FCjeaBCSGrtGBW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,11 +36,22 @@
         "Esta prueba se basa en modificaciones del proyecto Cloudtopolis (https://github.com/JoelGMSec/Cloudtopolis).\r\n",
         "\r\n",
         "En lugar de buscar multiples sesiones, simplemente se quiere ejecutar una sesión para resolver hashes (en concreto de NTML).\r\n",
-        "Se ha divido en 3 secciones.\r\n",
+        "Se ha divido en varias secciones:\r\n",
         "\r\n",
         "1º) Preparar entorno\r\n",
         "2º) Preparar fichero con hashes\r\n",
-        "3º) Ejecución de hashcat"
+        "3º) Comprobar velocidad de trabajo\r\n",
+        "4º) Busqueda de hashes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ijf26YYy3E-Q"
+      },
+      "source": [
+        "# 1º)Preparación de entorno\r\n",
+        "Se actualizan paquetes e instalan hascat y utilidades para comprobar la tarjeta gráfica. "
       ]
     },
     {
@@ -58,21 +69,21 @@
         "!apt install hashcat -y -q > /dev/null 2>&1\r\n",
         "!echo \"Instalando utilidades de pci ...\"\r\n",
         "!apt install pciutils -y -q > /dev/null 2>&1\r\n",
-        "!echo \"Comprobando tarjeta gráfica...\"\r\n",
-        "GPU_CARD = !lspci | grep NVIDIA\r\n",
-        "if not GPU_CARD:\r\n",
-        "    !echo -e \"\\n\\e[31;1m[!] No se ha encontrado una GPU NVIDA! (Revisar: Editar->Configuración del cuaderno->Aceleración por Hardware->GPU\\e[34;1m\"\r\n",
-        "    !lspci\r\n",
-        "else:\r\n",
-        "    !echo -e \"\\e[1;34mEncontrada tarjeta gráfica NVIDIA\\e[0m\"\r\n",
-        "    !echo -e \"\\e[1;34mTest de Velocidad\\e[0m\" \r\n",
-        "    !hashcat --benchmark -m1000 > TestDeVelocidad.txt 2>/dev/null\r\n",
-        "    !cat TestDeVelocidad.txt|grep Device\r\n",
-        "    !cat TestDeVelocidad.txt|grep Speed\r\n",
-        "    !echo -e \"\\e[1;34mListo para trabajar.\\e[0m\""
+        "!echo -e \"\\e[1;34mListo para trabajar. Asegúrate de tener un fichero 'ficheroHASHES.txt' creado antes de empezar la explotación\\e[0m\"\r\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XomHyBam3NDK"
+      },
+      "source": [
+        "# 2º) Preparación de fichero con hashes\r\n",
+        "Se crea el fichero \"ficheroHASHES.txt\" con unos cuantos hashes de ejemplo de tipo NTLM. \r\n",
+        "Se establece la variable tipoHASH a 1000 (para indicar el tipo NTLM). Para otros tipos ver la ayuda de hashcat.\r\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -97,10 +108,54 @@
         "!echo F700E1777EAD870B6543CEB06583E074 >>ficheroHASHES.txt #usuaria en NTLM   \r\n",
         "!echo F2AB082FA1B21C772EEA4193D454D7B0 >>ficheroHASHES.txt #usuario en NTLM   \r\n",
         "!echo 2E910C3936F4836AC29BBDC307536524 >>ficheroHASHES.txt #usuario@1 en NTLM\r\n",
-        "!echo $HASH >>ficheroHASHES.txt"
+        "!echo $HASH >>ficheroHASHES.txt\r\n",
+        "!echo -e \"\\e[1;34mCreado fichero de hashes tipo \"$tipoHASH\". Contenido:\\e[0m\"\r\n",
+        "!cat ficheroHASHES.txt\r\n",
+        "\r\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RTehjNYf4y6Y"
+      },
+      "source": [
+        "#3º) Comprobación de velocidad para búsquedas de tipo 1000 (NTLM).\r\n",
+        "Referencia Tarjeta gráfica básica:   GeForce GT 1030, 1660/2048 MB, 3MCU\r\n",
+        "Speed.:  6717.8 MH/s (29.78ms) @ Accel:64 Loops:1024 Thr:1024 Vec:8\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pvId-nI_4BBR"
+      },
+      "source": [
+        "GPU_CARD = !lspci | grep NVIDIA\r\n",
+        "if not GPU_CARD:\r\n",
+        "    !echo -e \"\\n\\e[31;1m[!] No se ha encontrado una GPU NVIDA! (Revisar: Editar->Configuración del cuaderno->Aceleración por Hardware->GPU\\e[34;1m\"\r\n",
+        "    !lspci\r\n",
+        "else:\r\n",
+        "    !echo -e \"\\e[1;34mEncontrada tarjeta gráfica NVIDIA\\e[0m\"\r\n",
+        "    !echo -e \"\\e[1;34mTest de Velocidad para tipo 1000\\e[0m\" \r\n",
+        "    !hashcat --benchmark -m1000 > TestDeVelocidad.txt 2>/dev/null\r\n",
+        "    !cat TestDeVelocidad.txt|grep Device\r\n",
+        "    !cat TestDeVelocidad.txt|grep Speed\r\n",
+        "   "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5wjs_g6g6b3S"
+      },
+      "source": [
+        "# 4º) Búsqueda de Hashes"
+      ]
     },
     {
       "cell_type": "code",
@@ -124,6 +179,7 @@
         "def EjecutaHashcatDeMascara(mascaraausar, tipoDeIncremento=\"--increment\", tipoHASH=1000,  ficheroPot=\"./potfile.txt\"):\r\n",
         "    inicio=datetime.datetime.now()\r\n",
         "    !echo -e \"\\e[0;34mBuscando \\e[1;34m\"$mascaraausar\" \"$tipoDeIncremento \" tipoHASH=\"$tipoHASH \" ficheroPot=\"$ficheroPot \"\\e[0m\"\r\n",
+        "    print(datetime.datetime.now(),': Inicio de hashcat ' )\r\n",
         "    !hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento  ficheroHASHES.txt $mascaraausar > /dev/null #2>&1\r\n",
         "    SinEncontrar=!hashcat -m$tipoHASH -a3 -w4 -O --potfile-path $ficheroPot $tipoDeIncremento --quiet ficheroHASHES.txt $mascaraausar --left\r\n",
         "    fin=datetime.datetime.now()\r\n",
@@ -132,10 +188,13 @@
         "    MuestraContenidoPotFile(ficheroPot)\r\n",
         "\r\n",
         "ficheroPorFileaUsar=\"./potfile.txt\"\r\n",
+        "incrementoPredeterminado=\"\"  #\"--increment --increment-min 8\"\r\n",
         "inicioEjecucion=datetime.datetime.now()\r\n",
+        "\r\n",
         "!rm $ficheroPorFileaUsar\r\n",
-        "for mascara in ['?a?a?a?a?a?a?a?a?a?a?a?a?a']: #, \"?a?l?a?a\"\r\n",
-        "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,), daemon=False)\r\n",
+        "\r\n",
+        "for mascara in ['?u?l?l?l?s?d?d', '?u?l?l?l?l?s?d?d' ,'?u?l?l?l?l?l?s?d?d']:            # ,'?u?l?l?l?a?a?a?a?a?a?a?a?a']: #, \"?a?l?a?a\"\r\n",
+        "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,incrementoPredeterminado,), daemon=False)\r\n",
         "  x.start()\r\n",
         "  contadorsegundos=0; incrementoDeEspera=1\r\n",
         "  ContenidoPotFileAnterior=\"\"\r\n",
@@ -151,11 +210,20 @@
         "      #Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\r\n",
         "      if (contadorsegundos%(60)==0 and contadorsegundos>0):\r\n",
         "        print(datetime.datetime.now(),': Tiempo transcurrido ' , contadorsegundos/60 , 'mn....')\r\n",
-        "      #Aumentamos el contador de tiempo\r\n",
+        "      \r\n",
         "      \r\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sxnsSAoe7w-_"
+      },
+      "source": [
+        "# Trozos de código de pruebas"
+      ]
     },
     {
       "cell_type": "code",
