--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPhKPrmG8FCjeaBCSGrtGBW",
+      "authorship_tag": "ABX9TyPUXYmFub6RLBRw4wbtU5i2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HZ1IOEJBxVOt"
+        "id": "HZ1IOEJBxVOt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24f2f90c-57ba-4fa6-e9c9-640624a3179b"
       },
       "source": [
         "!echo -e \"\\n\\e[1;34mPreparación del entorno\\e[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\"               \r\n",
@@ -69,10 +73,28 @@
         "!apt install hashcat -y -q > /dev/null 2>&1\r\n",
         "!echo \"Instalando utilidades de pci ...\"\r\n",
         "!apt install pciutils -y -q > /dev/null 2>&1\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
         "!echo -e \"\\e[1;34mListo para trabajar. Asegúrate de tener un fichero 'ficheroHASHES.txt' creado antes de empezar la explotación\\e[0m\"\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\u001b[1;34mPreparación del entorno\u001b[0m (tardara un par de minutos mínimo). Esta parte sólo hace falta ejecutarla una vez.\n",
+            "Buscando paquetes nuevos...\n",
+            "Actualizando paquetes...\n",
+            "Instalando hashcat ...\n",
+            "Instalando utilidades de pci ...\n",
+            "Mounted at /content/drive\n",
+            "\u001b[1;34mListo para trabajar. Asegúrate de tener un fichero 'ficheroHASHES.txt' creado antes de empezar la explotación\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -166,6 +188,11 @@
         "#Trabajando como hilos\r\n",
         "import threading\r\n",
         "import time, datetime\r\n",
+        "\r\n",
+        "!echo -e \"\\n\\e[1;34mConectando google drive para guardado de resultaos\\e[0m (Pulsar el enlace y rellenar con el id solicitado)\" \r\n",
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/drive')\r\n",
+        "\r\n",
         "def MuestraContenidoPotFile( ficheroPot=\"./potfile.txt\"):\r\n",
         "    ContenidoPotFile=!cat $ficheroPorFileaUsar 2>/dev/null\r\n",
         "    if (not ContenidoPotFile ):\r\n",
@@ -187,6 +214,11 @@
         "    !echo -e \"\\e[1;34mFin de máscara \" $mascaraausar \". Resueltos (\"$segundosEmpleados\"sg):\\e[0;34m\"\r\n",
         "    MuestraContenidoPotFile(ficheroPot)\r\n",
         "\r\n",
+        "def GuardaPotEnDrive(ficheroPot=\"./potfile.txt\")\r\n",
+        "    ContenidoPot=!cat ficheroPot\r\n",
+        "    with open('/content/drive/My Drive/potFile.txt', 'w') as f:\r\n",
+        "      f.Write(ContenidoPot)\r\n",
+        "      \r\n",
         "ficheroPorFileaUsar=\"./potfile.txt\"\r\n",
         "incrementoPredeterminado=\"\"  #\"--increment --increment-min 8\"\r\n",
         "inicioEjecucion=datetime.datetime.now()\r\n",
@@ -206,6 +238,7 @@
         "      ContenidoPotFile=!cat $ficheroPorFileaUsar\r\n",
         "      if (ContenidoPotFile != ContenidoPotFileAnterior):\r\n",
         "        MuestraContenidoPotFile()\r\n",
+        "        GuardaPotEnDrive()\r\n",
         "      ContenidoPotFileAnterior=ContenidoPotFile\r\n",
         "      #Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\r\n",
         "      if (contadorsegundos%(60)==0 and contadorsegundos>0):\r\n",
@@ -215,6 +248,34 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "82DluGXBDoJJ",
+        "outputId": "85bf203a-6d62-4fe6-93da-b0778416a5f0"
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.flush_and_unmount();\r\n",
+        "drive.mount('/content/drive')\r\n",
+        "!cp ./potfile.txt  /content/drive/My\\ Drive/\r\n",
+        "drive.flush_and_unmount();\r\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive not mounted, so nothing to flush and unmount.\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
