--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPUXYmFub6RLBRw4wbtU5i2",
+      "authorship_tag": "ABX9TyOoqYmAFOYjtxwIq9D1rPbc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -182,16 +182,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rNfuS0OR2rMv"
+        "id": "rNfuS0OR2rMv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a842a913-768e-4cf1-b1bc-4e4189dc855b"
       },
       "source": [
         "#Trabajando como hilos\r\n",
         "import threading\r\n",
         "import time, datetime\r\n",
-        "\r\n",
-        "!echo -e \"\\n\\e[1;34mConectando google drive para guardado de resultaos\\e[0m (Pulsar el enlace y rellenar con el id solicitado)\" \r\n",
-        "from google.colab import drive\r\n",
-        "drive.mount('/content/drive')\r\n",
         "\r\n",
         "def MuestraContenidoPotFile( ficheroPot=\"./potfile.txt\"):\r\n",
         "    ContenidoPotFile=!cat $ficheroPorFileaUsar 2>/dev/null\r\n",
@@ -214,40 +214,81 @@
         "    !echo -e \"\\e[1;34mFin de máscara \" $mascaraausar \". Resueltos (\"$segundosEmpleados\"sg):\\e[0;34m\"\r\n",
         "    MuestraContenidoPotFile(ficheroPot)\r\n",
         "\r\n",
-        "def GuardaPotEnDrive(ficheroPot=\"./potfile.txt\")\r\n",
-        "    ContenidoPot=!cat ficheroPot\r\n",
-        "    with open('/content/drive/My Drive/potFile.txt', 'w') as f:\r\n",
-        "      f.Write(ContenidoPot)\r\n",
-        "      \r\n",
-        "ficheroPorFileaUsar=\"./potfile.txt\"\r\n",
+        "def GuardaEnDrive(nombreDeFichero, textoAguardar):\r\n",
+        "    drive.mount('/content/drive')\r\n",
+        "    with open('/content/drive/My Drive/$nombreDeFichero', 'w') as f:\r\n",
+        "        f.write(textoAguardar)\r\n",
+        "    drive.flush_and_unmount();\r\n",
+        "\r\n",
+        "\r\n",
+        "def GuardaPotEnDrive(ficheroPot=\"./potfile.txt\"):\r\n",
+        "    drive.mount('/content/drive')\r\n",
+        "    ahora=\"F\"+datetime.datetime.now().strftime(\"%Y%m%d-%HH%MM%SS\")+\".potfile.txt\"\r\n",
+        "    !cp ./potfile.txt  /content/drive/My\\ Drive/$ahora\r\n",
+        "    drive.flush_and_unmount();\r\n",
+        "\r\n",
+        "tipoHASH=1000    \r\n",
+        "ficheroPotFileaUsar=\"./potfile.txt\"\r\n",
         "incrementoPredeterminado=\"\"  #\"--increment --increment-min 8\"\r\n",
         "inicioEjecucion=datetime.datetime.now()\r\n",
         "\r\n",
-        "!rm $ficheroPorFileaUsar\r\n",
+        "!echo -e \"\\n\\e[1;34mConectando google drive para guardado de resultaos\\e[0m (Pulsar el enlace y rellenar con el id solicitado)\" \r\n",
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/drive')\r\n",
+        "drive.flush_and_unmount();\r\n",
+        "\r\n",
+        "\r\n",
+        "!rm $ficheroPotFileaUsar\r\n",
         "\r\n",
         "for mascara in ['?u?l?l?l?s?d?d', '?u?l?l?l?l?s?d?d' ,'?u?l?l?l?l?l?s?d?d']:            # ,'?u?l?l?l?a?a?a?a?a?a?a?a?a']: #, \"?a?l?a?a\"\r\n",
-        "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,incrementoPredeterminado,), daemon=False)\r\n",
+        "  x = threading.Thread(target=EjecutaHashcatDeMascara, args=(mascara,incrementoPredeterminado,tipoHASH,ficheroPotFileaUsar), daemon=False)\r\n",
         "  x.start()\r\n",
-        "  contadorsegundos=0; incrementoDeEspera=1\r\n",
-        "  ContenidoPotFileAnterior=\"\"\r\n",
+        "  incrementoDeEspera=1;\r\n",
+        "  ContenidoPotFileAnterior=!cat $ficheroPotFileaUsar\r\n",
         "  while x.isAlive():\r\n",
         "      #Esperamos un tiempo a evaluar\r\n",
         "      time.sleep(incrementoDeEspera)\r\n",
         "      contadorsegundos=round((datetime.datetime.now()-inicioEjecucion).total_seconds(),0) \r\n",
         "      #Comprobamos si se han encontrado nuevos hashes\r\n",
-        "      ContenidoPotFile=!cat $ficheroPorFileaUsar\r\n",
+        "      ContenidoPotFile=!cat $ficheroPotFileaUsar\r\n",
         "      if (ContenidoPotFile != ContenidoPotFileAnterior):\r\n",
         "        MuestraContenidoPotFile()\r\n",
-        "        GuardaPotEnDrive()\r\n",
+        "        GuardaPotEnDrive(ficheroPotFileaUsar)\r\n",
         "      ContenidoPotFileAnterior=ContenidoPotFile\r\n",
         "      #Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\r\n",
         "      if (contadorsegundos%(60)==0 and contadorsegundos>0):\r\n",
-        "        print(datetime.datetime.now(),': Tiempo transcurrido ' , contadorsegundos/60 , 'mn....')\r\n",
+        "        texto=\"\"+datetime.datetime.now()+\": Tiempo transcurrido \" + (contadorsegundos/60) + \"mn....\"\r\n",
+        "        print(texto)\r\n",
+        "        GuardaPotEnDrive(\"Evolucion.txt\",texto)\r\n",
         "      \r\n",
         "      \r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\u001b[1;34mConectando google drive para guardado de resultaos\u001b[0m (Pulsar el enlace y rellenar con el id solicitado)\n",
+            "Mounted at /content/drive\n",
+            "\u001b[31mAlready an instance running on pid 22668\u001b[0m\n",
+            "\n",
+            "\u001b[1;34mFin de máscara  ?u?l?l?l?s?d?d . Resueltos (0.26sg):\u001b[0;34m\n",
+            "\u001b[1;34mPotfile vacio\u001b[0m\n",
+            "\u001b[0;34mBuscando \u001b[1;34m?u?l?l?l?l?s?d?d   tipoHASH=1000  ficheroPot=./potfile.txt \u001b[0m\n",
+            "2021-01-04 16:07:56.244577 : Inicio de hashcat \n",
+            "\u001b[31mAlready an instance running on pid 22668\u001b[0m\n",
+            "\n",
+            "\u001b[1;34mFin de máscara  ?u?l?l?l?l?s?d?d . Resueltos (0.36sg):\u001b[0;34m\n",
+            "\u001b[1;34mPotfile vacio\u001b[0m\n",
+            "\u001b[31mAlready an instance running on pid 22668\u001b[0m\n",
+            "\n",
+            "\u001b[1;34mFin de máscara  ?u?l?l?l?l?l?s?d?d . Resueltos (0.27sg):\u001b[0;34m\n",
+            "\u001b[1;34mPotfile vacio\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
