--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -6,7 +6,7 @@
       "name": "Probando Hashcat.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoqYmAFOYjtxwIq9D1rPbc",
+      "authorship_tag": "ABX9TyPi2HfZqPxRRAJ77lq8r68U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "\r\n",
         "!echo -e \"\\e[1;34mListo para trabajar. Asegúrate de tener un fichero 'ficheroHASHES.txt' creado antes de empezar la explotación\\e[0m\"\r\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,9 +184,10 @@
       "metadata": {
         "id": "rNfuS0OR2rMv",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 531
         },
-        "outputId": "a842a913-768e-4cf1-b1bc-4e4189dc855b"
+        "outputId": "20a524e8-b945-4dd7-f910-03ed50cc4fc4"
       },
       "source": [
         "#Trabajando como hilos\r\n",
@@ -263,7 +264,7 @@
         "      \r\n",
         "      \r\n"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,50 +272,34 @@
             "\n",
             "\u001b[1;34mConectando google drive para guardado de resultaos\u001b[0m (Pulsar el enlace y rellenar con el id solicitado)\n",
             "Mounted at /content/drive\n",
-            "\u001b[31mAlready an instance running on pid 22668\u001b[0m\n",
+            "rm: cannot remove './potfile.txt': No such file or directory\n",
+            "\u001b[31mnvmlDeviceGetFanSpeed(): Not Supported\u001b[0m\n",
             "\n",
-            "\u001b[1;34mFin de máscara  ?u?l?l?l?s?d?d . Resueltos (0.26sg):\u001b[0;34m\n",
             "\u001b[1;34mPotfile vacio\u001b[0m\n",
-            "\u001b[0;34mBuscando \u001b[1;34m?u?l?l?l?l?s?d?d   tipoHASH=1000  ficheroPot=./potfile.txt \u001b[0m\n",
-            "2021-01-04 16:07:56.244577 : Inicio de hashcat \n",
-            "\u001b[31mAlready an instance running on pid 22668\u001b[0m\n",
-            "\n",
-            "\u001b[1;34mFin de máscara  ?u?l?l?l?l?s?d?d . Resueltos (0.36sg):\u001b[0;34m\n",
+            "Mounted at /content/drive\n",
+            "\u001b[1;34mFin de máscara  ?u?l?l?l?s?d?d . Resueltos (12.85sg):\u001b[0;34m\n",
             "\u001b[1;34mPotfile vacio\u001b[0m\n",
-            "\u001b[31mAlready an instance running on pid 22668\u001b[0m\n",
+            "\u001b[31mnvmlDeviceGetFanSpeed(): Not Supported\u001b[0m\n",
             "\n",
-            "\u001b[1;34mFin de máscara  ?u?l?l?l?l?l?s?d?d . Resueltos (0.27sg):\u001b[0;34m\n",
-            "\u001b[1;34mPotfile vacio\u001b[0m\n"
+            "tcmalloc: large alloc 2997329920 bytes == 0x556d6b700000 @  0x7f01848c8001 0x556d2d6405d1 0x556d2d640612 0x556d2d64cc15 0x556d2d601652 0x556d2d601c4c 0x556d2d5ea2af 0x7f01840a0bf7 0x556d2d5e8b4a\n",
+            "\u001b[1;34mPotfile vacio\u001b[0m\n",
+            "\u001b[0;34mBuscando \u001b[1;34m?u?l?l?l?l?l?s?d?d   tipoHASH=1000  ficheroPot=./potfile.txt \u001b[0m\n",
+            "2021-01-04 16:17:25.523218 : Inicio de hashcat \n",
+            "\u001b[31mnvmlDeviceGetFanSpeed(): Not Supported\u001b[0m\n",
+            "\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
         },
-        "id": "82DluGXBDoJJ",
-        "outputId": "85bf203a-6d62-4fe6-93da-b0778416a5f0"
-      },
-      "source": [
-        "from google.colab import drive\r\n",
-        "drive.flush_and_unmount();\r\n",
-        "drive.mount('/content/drive')\r\n",
-        "!cp ./potfile.txt  /content/drive/My\\ Drive/\r\n",
-        "drive.flush_and_unmount();\r\n"
-      ],
-      "execution_count": 31,
-      "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Drive not mounted, so nothing to flush and unmount.\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-42-336b51bd72f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     67\u001b[0m       \u001b[0;31m#Cada 5minutos mostramos un contador (....TODO: y salvamos hashes en GoogleDrive)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m         \u001b[0mtexto\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\": Tiempo transcurrido \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcontadorsegundos\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"mn....\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexto\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0mGuardaPotEnDrive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Evolucion.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtexto\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: must be str, not datetime.datetime"
+          ]
         }
       ]
     },
