--- a/Probando_Hashcat.ipynb
+++ b/Probando_Hashcat.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPf/vSnEE2lAzyC6e5fm73h",
+      "authorship_tag": "ABX9TyObftik6kO/m5i/y+8C6Dbm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,6 +112,7 @@
         "!echo F700E1777EAD870B6543CEB06583E074 >>ficheroHASHES.txt #usuaria en NTLM   \r\n",
         "!echo F2AB082FA1B21C772EEA4193D454D7B0 >>ficheroHASHES.txt #usuario en NTLM   \r\n",
         "!echo 2E910C3936F4836AC29BBDC307536524 >>ficheroHASHES.txt #usuario@1 en NTLM\r\n",
+        "!echo C6017FF952BF3163DCB1E5080409E03E >>ficheroHASHES.txt #Laleche#2014 en NTLM\r\n",
         "!echo $HASH >>ficheroHASHES.txt\r\n",
         "!echo -e \"\\e[1;34mCreado fichero de hashes tipo \"$tipoHASH\". Contenido:\\e[0m\"\r\n",
         "!cat ficheroHASHES.txt\r\n",
